--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -62,6 +62,7 @@ header .nav {
     padding: 20px 0px;
     opacity: 0;
     transition: 1s;
+    z-index: 99999999;
 }
 
 header .nav>.nav-header {
